update new site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -80,7 +79,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Análise completa de veículos seminovos</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>  <img src="assets/images/ativo-6.svg" alt="" style="max-width:200px; margin: 0 auto;"><br>Análise completa de veículos seminovos</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-5">
                     Vamos pessoalmente realizar uma série de <br>verificações no veículo desejado</p>
@@ -548,7 +547,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="g-recaptcha-response" data-form-captcha="true" value="6Le5AXMdAAAAAMe2t-eS6vlOBcj1yICDQLUaa-CL"><input type="hidden" name="email" data-form-email="true" value="S9oz6X0110vRbdUOTKfIqa4Oyl0mfPhhFGBI+Kvetr/Qenc5bYCcnMSDR2LU00tJpnkzA9955Ax0nE3AnhOjNROWhZ2wnR+O2dhPUVRFyXj8Zqr+HbKgsbkqBRFq38Lf.sk272OEftWKUcZxs+psCj7m2dUOdYvITR0J713kidUmlWVj+CL9POY0toKW4/LBjD61HJ1mT2nhTKVZVFDchAVG+liNzYAWDemwA8Y3fijQaMkw4c/7bI6m2Ee67bKRB.yiXsImGETYYJUmUkfDcdLalgZXTytTluZriR7ItnUIFRGwwWWC7FHVelT+J1A8jgyWx5/N18pxLHt/97gERqcJV8tNHYg0EQaVaEP45VDu+Bo6u+qU07UWhhW8Ne6iem">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="g-recaptcha-response" data-form-captcha="true" value="6Le5AXMdAAAAAMe2t-eS6vlOBcj1yICDQLUaa-CL"><input type="hidden" name="email" data-form-email="true" value="W5Qcc3BOqFNrYdd6SNlxe27EKukg3tI3qAlrRd1DFLnFTYFz/apy2qBg6Rw4j1FTeG+z6nLh+q1iPNca4NrfdKxh8k8rRpCYYJAAQ2yb3R2Ptxqzs05VE5gMxM5ryDOf.nLj2jkfYY8GdsIlVh9i0zFbo0Rv6yvnAOFwjSE8iyIlGL9cUqtCLJCk6nXG4KqBZ10OmQICa9Q2rrNeCai53U06lO3kSeHgsYvaG2OBGrtU8UKQsZ867MKFd4b7PiHHV.FhHU8lzYi7+EFI1JOZyFrjbCbbD9zY7TVIBqWLDQyIPv+Oye0gOozL3IoQb1wsMzOj+saSCXHC6RzfGOJZ5sxqmRemIm1VNncNGav5+JOZPxwUyaO0ewuLMbdzzPuAzd">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -567,9 +566,11 @@
 <input type="tel" name="Telefone" placeholder="Digite um telefone para contato" data-form-field="Telefone" class="form-control display-7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="" id="Telefone-form5-3">
 </div>
 <div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<textarea name="textarea" placeholder="deseja enviar alguma mensagem, duvida?" data-form-field="textarea" class="form-control display-7" style="margin-top: 0px; margin-bottom: 0px; height: 196px;" id="textarea-form5-3"></textarea>
+<textarea name="textarea" placeholder="deseja enviar alguma mensagem, duvida?" data-form-field="textarea" class="form-control display-7" id="textarea-form5-3"></textarea>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary-outline display-5">Enviar Solicitação</button></div>
+<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
+<button type="submit" class="btn btn-primary-outline display-5">Enviar Solicitação</button>
+</div>
 </div>
 <span class="gdpr-block">
 <label>
@@ -769,7 +770,7 @@ function myFunction() {
   
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgba(55, 75, 67, 0.99)' data-cookie-textButton='Aceitar' data-cookie-colorButton='' data-cookie-colorLink='#ffffff' data-cookie-underlineLink='true' data-cookie-text="Nós utilizamos cookies para entregar uma melhor experiência. Leia mais nossa <a href='privacy.html'>política de cookie</a>.">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgba(30, 30, 34, 0.99)' data-cookie-textButton='Aceitar' data-cookie-colorButton='#424a4d' data-cookie-colorLink='#ffffff' data-cookie-underlineLink='true' data-cookie-text="Nós utilizamos cookies para entregar uma melhor experiência. Leia mais nossa <a href='privacy.html'>política de cookie</a>.">
     <input name="animation" type="hidden">
   
 </body>
