update new site

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="g-recaptcha-response" data-form-captcha="true" value="6Le5AXMdAAAAAMe2t-eS6vlOBcj1yICDQLUaa-CL"><input type="hidden" name="email" data-form-email="true" value="W5Qcc3BOqFNrYdd6SNlxe27EKukg3tI3qAlrRd1DFLnFTYFz/apy2qBg6Rw4j1FTeG+z6nLh+q1iPNca4NrfdKxh8k8rRpCYYJAAQ2yb3R2Ptxqzs05VE5gMxM5ryDOf.nLj2jkfYY8GdsIlVh9i0zFbo0Rv6yvnAOFwjSE8iyIlGL9cUqtCLJCk6nXG4KqBZ10OmQICa9Q2rrNeCai53U06lO3kSeHgsYvaG2OBGrtU8UKQsZ867MKFd4b7PiHHV.FhHU8lzYi7+EFI1JOZyFrjbCbbD9zY7TVIBqWLDQyIPv+Oye0gOozL3IoQb1wsMzOj+saSCXHC6RzfGOJZ5sxqmRemIm1VNncNGav5+JOZPxwUyaO0ewuLMbdzzPuAzd">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="WpIj1umfCtZN85rVMePBRcqVDqOSAedmpzyU5c2OVUcYl+nPnjqNjPno2FrD3z2eYsBogSbM2/Psn1W4F1mPpCLYk65YMa0fK7xeKekkSk8xt9lNqarO4quEFCxeCW3z.0mMFQlejLANTQFF75IlMG6MveaGBbPIo1V8316VImsh2D+W3x9SyP8VYLYyVMHZFnZ1+1arlY1Fk+jmDPv6V+J4UOtOeQ7F3ZrC0Efc1u+wZkatGiQsXYSKnWoIphLiw">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -764,7 +764,6 @@ function myFunction() {
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js?render=6Le5AXMdAAAAAMe2t-eS6vlOBcj1yICDQLUaa-CL"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
