update new site

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-1">
                             <strong>Como funciona?</strong><br><strong><br></strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-5">Iremos pessoalmente com nossa equipe técnica avaliar o veículo no no local de venda. <br><br>Inspecionaremos todo o automóvel conforme sua aparência, funcionamento, motor, parte interna, externa, acessórios, incluíndo toda parte de documentação, test-drive e muito mais.<br><br>No final enviaremos um relatório altamente ilustrativo com a nossa avaliação sobre o veículo.</p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-5">Iremos pessoalmente com nossa equipe técnica avaliar o veículo no local de venda. <br><br>Inspecionaremos todo o automóvel conforme sua aparência, funcionamento, motor, parte interna, externa, acessórios, incluíndo toda parte de documentação, test-drive e muito mais.<br><br>No final enviaremos um relatório altamente ilustrativo com a nossa avaliação se <br>recomendamos ou não a compra.</p>
                         
                     </div>
                 </div>
@@ -529,7 +529,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="fWMP0UJNSWYlxIwDv1rhl1ijP+kVcqEt+Vjn8Yvdp2x8pEum+6bng3aEQVDXApvpreuKGRg0cp/vNhwkpu6jJ2et6/VOTCqGRmYNceC7yn2sYcKKddNzTLW5jvX7g/0H.TMYwYRoanc6X2y/lSjqLh+q6nRE8fn9+uGI38iDVLTeyBbREupq/fQm05zuMl0LYidTR/rPIzkWu9v/2ds06ZdJ31WdnrEqUxQKpNEQHrN0gmLscPe8OlndmvKg2bNkA">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="aX9ygZ6kSW+lF7D4dV4HHTqGQVlnBnYDOc7RO8NHHEUOZnC1d37sHY3MMyLpArCHUvHHWvxIV0ex9Kp1mVV8rHFQOPwu686C9TsUqWc1ZagEunpt+5FAtt7MOs/JSCNb.yXl60uHVKVFv3PmOxSAhH2KZHk+cIejXkF1CuEtTQRvStOfoJHQBOfw/x/aYiBbIPnKpQzrD7qxDpnACFOGtRVtw6w9Ht9xqbMeiNIwsRlcF4t1pJZFz1w4tXnoZ0sf/">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
