update new site

--- a/index.html
+++ b/index.html
@@ -301,13 +301,8 @@
                 <div class="text-wrapper">
                     <h2 class="mbr-section-title mb-3 mbr-fonts-style display-1">
                         <strong>Antes de comprar é melhor verificar</strong></h2>
-                    <p class="mbr-text mb-3 mbr-fonts-style display-7">
-                        Intro with Color, paddings and a video on the right. Mobirise helps you cut down
-                        development time by providing you with a flexible website editor with a drag and drop interface.
-                    </p>
-                    <div class="mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="#">Learn more</a>
-                    </div>
+                    <p class="mbr-text mb-3 mbr-fonts-style display-7">Sabemos que existem muitos carros a venda e nem sempre todos estão em condições ideias do que desejamos. <br><br>Por isso é importante ter certeza do que está comprando em detalhes.</p>
+                    
                 </div>
             </div>
             <div class="mbr-figure col-12 col-md-6"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Sps2QTSHE4s?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
@@ -629,7 +624,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="K2qpH7W1amiGG3S0JMX5VQsIFrWb2CcAL+b9dMd+/k0Ssqf7pNxWKFEA56LQZMmc0Oznj0wzNneXuLrnrGaVn2N9C/69erI/iU0qNe+0D6xco8JzuID9ABkoqimT/TOu.G6X2iOM1i3aexBH5p6fv7Z7uWKyALRL8FeeOxil1LJmAuBGZ2O8Fpk+VsNJwBD8BHT87m/2lR3a15O667vFolwGiapkl66bgAMFGTNtrTEgTYKKeRn8nFfcU3RkqF63X">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="TN0zDK7hc7Ton9rEx6M8WmOnJcOdMrjE9Mp0hOYcOyl8kf77Gncvfg4zhMC8PtPnskYKk46yW/n0MbEBHBVDA2DviWDNXkwZv2sGW/5doB62ZA9gua52O0Qwb+8hgYK2.zy/gY7kE6J8g2N9WKeA24xXBQaN8rT6dd8QF28iS8WPF4fYXkE5VizjGzeJs/da4hb9LHk/nwXmyv+yjF3mSrjayzd/9yBjU5Ugtvd4JHJq/kH8oSFYOVqO+fPotoYh0">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
