update new site

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
                 <img src="assets/images/sem-titulo-2.png" style="max-width:450px; text-align:center; margin: 0 auto; margin-bottom: 1em;" alt="">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Sabe quando você quer comprar um carro usado&nbsp;<br>mas não sabe se ele está bom?</strong></h1>
-                <p class="mbr-text mbr-fonts-style display-1"><strong>Você tem mil dúvidas <br>nessa hora,  certo?</strong></p>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Você quer comprar um carro usado&nbsp;<br>mas não sabe se ele está bom?</strong></h1>
+                <p class="mbr-text mbr-fonts-style display-2"><strong>Você tem mil dúvidas nessa hora,  certo?</strong></p>
                 
                 
             </div>
@@ -604,7 +604,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="A3QatjEaiHhsdtNkw0Aghm8l3BbA63kUupqKVFlZm4qUor+87UNuHAah6HMC3hmCRX9G6UWZh1mqyJDKcNxNubO1+AZKUBvW5CEod0uxQApIl6WCr43Tv15lkXiBS7f7.susZH2k8hofPkJXqbI4sYIP6DJjMNFSCyzIGZfXTCAruEwUxirpgc+H9M7SzJwPLuyxB4Hj1OHaSLMjHd+hoCG1fsHljQWw8rnpn1Z1sZYL0hojRfoIzORbIn4FVLQtQ">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="1uOIk5o/8bs6I9hDT/ppjEtVHWeM01sV83sNL3X13ynBFBR1BP3qAwGO8crtpBBZOdbD9DOQQGXv/QSkJW9ShgaPrNCOrBFWSyR0JmCBftfreOpNlubeucjnidoZyBnQ.eY63+U3AVxyC4gScCSPFKQ/PvgaIGAhSwLvmLIMT8BDyI4N8cDTsKCcNbiXoWTz0LT4NUGxjt2+Bkc9pIPLxnkd/O4hH+DK2kvXNGth5Bc1VBgAZR/tpG/Mm/MLqN190">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
