--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2">
                             <strong>Como funciona?</strong><br><strong><br></strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-7">A equipe da VerifyCar entra em contato com o vendedor e vai até o local combinado para verificar o automóvel. <br><br>O automóvel passa pela inspeção criteriosa da VerifyCar e centenas de item são verificados e registrados, incluindo documentação, aparência, mecânica e test-drive, além de muitos outros.<br><br>Após a inspeção, os dados são analisados e um relatório detalhado é gerado com todas as informações do veículo, incluindo a recomendação final de compra do seu automóvel ou a desistência.</p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7">Nossa equipe entra em contato com o vendedor e vai até o local combinado para verificar o automóvel. <br><br>O automóvel passa pela inspeção criteriosa da VerifyCar e centenas de item são verificados e registrados, incluindo documentação, aparência, mecânica e test-drive, além de muitos outros.<br><br>Após a inspeção, os dados são analisados e um relatório detalhado é gerado com todas as informações do veículo, incluindo a recomendação final de compra do seu automóvel ou a desistência.</p>
                         
                     </div>
                 </div>
@@ -509,7 +509,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="NxxbJmBw5AbmWJhm8WQa0i/beb5WUOjKf0ZxjAdLi1KUYpUGjcD4NupTF8CtLXLC7PlthLKFQCUo/MWma913pZp9LlD4tmPJayjklC2esy5Ft31HgpIl8JEe2qHLaPli.nuV4Jw/AyJnt7hDZIRXk/W2d8Q5NGgvsVq7k0WpJFpOkI+XJbJuepJhIa40X4/OD4tMTByfDXLsZRvW2urLgJMqdtgnX0beO1QVbRWRym4zHixmwrBp1MIknh/3/tkDW">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="2LEJO8bhUjuNqKC4YKTThNsLJjdn0oWHQa8ISsHygiaVZGlmeO1CFe8s5VXk3FaBXma+FFevv8Rty1vZu2g/KLxYkLAy+ac8o4k//LAvJ5K6tAYIW/pSIwXg+U0i6d+A.oRXXz3Biqy4FbbtdrEKbXkTf88L/XUUWg3fMNEREywgeQPpxplVmCvSqLez8GI2W+QVpn5fsIEOgPtaq2HxV8cDoWUu09R6yl6NAwuURgfcvP0OrMliMcRw7/rIR+yAA">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
