--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="zr+RzJAWTuPP2HZETYzEVpdhc2pGWoU0DrZaJxbq5Mvl4u4TPnjl24qHSXE9bAeOGNRDgje96LRM2CYP6OLKYMuotRJuPyrZe1Z/GbZ+ocGteBX6UbZvM/NmEnjveA1t.m1RoC2cgk+qoRBDgt/GNMLx2ZAVXoYc7szOfGwAaoEUV0Vjdww4P8rPDsA2l2UWXDyS8A8xW5bmmBEIR5BKX+itlLGD699Geg8GxHKUaRn4kNiUjG7lkqnHvGpOAQLF2">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="m+oCPU2EWMwp+ZD5v8E7CZykWwslAzuoIYNz9hQvUKGupbzVQoDFjyDfVoRZgW8yQ0xZI2DsLDlHavXe5XHe7xxItAeR92BPcUsl1Pp8ChPR2vKUSClekbCwwWDyS+jd.q9dz42er3XvGt9L++ShCDokQZl0FVKEmVEwEY6gnxa2Cqm5WAE91Uk8683Jl5f69hSVqaAUfTHb3lLn74fwgEjdS+sZbOx0Iq+87E8jtQyovkg34vKNB99/tGEQp7Wq5">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -576,12 +576,14 @@
 <input type="email" name="email" placeholder="E-mail" data-form-field="email" class="form-control display-7" required="required" value="" id="email-form5-3">
 </div>
 <div data-for="Telefone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="Telefone" placeholder="Digite um telefone para contato" data-form-field="Telefone" class="form-control display-7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="" id="Telefone-form5-3">
+<input type="tel" name="Telefone" placeholder="Digite um telefone para contato" data-form-field="Telefone" class="form-control display-7" value="" id="Telefone-form5-3">
 </div>
 <div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <textarea name="textarea" placeholder="deseja enviar alguma mensagem, duvida?" data-form-field="textarea" class="form-control display-7" id="textarea-form5-3"></textarea>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary-outline display-7">Enviar Mensagem</button></div>
+<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
+<button type="submit" class="btn btn-primary-outline display-7">Enviar Mensagem</button>
+</div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
