feat: first commit

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="LRzPZbOFXHDKrdPHBBSe26NCe61YhMNYyNV41ukrdD3q/NAroCLRRGLLOSmtbZzAkq1V9dmLo49E7vibrx6F7zhsSjLbmrTmz/aFOCySGK6MCZojc6AI2+9dePMj2EG/.HAZU2iKyVLCogECVXZVH2Pp2Au2K8S2YHnwIn8tSW+ER1XWgBvpGy7QFew7QmNWChQx8xkzcQBGf5EFbuT+8k2/nr7YT8jwqdHbFDJ0rIu/fi5NOPf2NTrbYuVK749tw">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="wTH+L8q0AIHu+9wyEN8CBZ68gMmH/3l+aPSwL03K6/uijoJ6/jS1m7Eni1VjdLbp5Vwh46rsBKfheog5VWzrp7N+kJNiornsuTLcaXZwuMDZ2ad+atpqir2xP7SYyjlA.YPHGEMkiGmS+KwUEck0YhfpkY2rvusa65jSIFTYG2rjlzIWgSc/4tAQNLU5dP/MfmPjO627rgV96NsaLPKh6wwSApsw93wgvwNW/akN3n9yqXpq7q8eG165MrinuUgj+">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -530,9 +530,7 @@
 <div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <textarea name="textarea" placeholder="deseja enviar alguma mensagem, duvida?" data-form-field="textarea" class="form-control display-7" style="margin-top: 0px; margin-bottom: 0px; height: 199px;" id="textarea-form5-3"></textarea>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
-<button type="submit" class="btn btn-primary-outline display-7">Enviar Mensagem</button>
-</div>
+<div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary-outline display-7">Enviar Mensagem</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -695,8 +693,6 @@ function myFunction() {
 <script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/parallax/jarallax.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
@@ -706,8 +702,7 @@ function myFunction() {
   
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#ffffff' data-cookie-colorBg='rgba(30, 30, 34, 0.99)' data-cookie-textButton='Aceitar' data-cookie-colorButton='#424a4d' data-cookie-colorLink='#ffffff' data-cookie-underlineLink='true' data-cookie-text="Nós utilizamos cookies para entregar uma melhor experiência. Leia mais nossa <a href='privacy.html'>política de cookie</a>.">
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
   
 </body>
 </html>
