--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-20377927-14"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-20377927-14');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu3 cid-sQrALrtseL" once="menu" id="menu3-1">
     
@@ -509,7 +523,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="DVMLP4sHEhNVwRwopkld02GL/xQ/WRyB43kNUbqzSiDlglPV+ZcOw/KzsLb5bYG+HmiySyBNYh9DAxDiOcn8ZQZg8N9GkI+v6OtNH+O8oUoRQRG9cskKEpAUFfiWA7Pm.1IkdtPVJDZ2/noWSVR/CH+oWgSAzdXl2YG6Hvqk0tt+gVal8aHHmTyWf+rTviBrqTuCmx7ZF22EsYCe//h8fJJfAtYfDVY3DIrzIs9WR3Oq46YDjgTqb+eYja/RjFIJn">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="oJp+fuMZWAuMAHuLsWHG18/YqEkcq+XpPhBrHVwhTB5s5VLP6RtKh36OC6SXPEQOcV4rq0JS53VZOWUpvUCLgQM7ji0jDl30WDdlSuUdgXaB1qJ2TbFGjUFYDzfRU0rv.JobZEWbWyJupPELw0s6EKOZ7MoAoI4ZMI8WOaNvx69y6jrGr15RB+Qi1n+ydjMfg+2PlXLjRjobpdClexBpmKLNk3e5dk+Cwe4tF7rO7cB1qCWo8TQyiSGT7q8oV6uU5">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -688,6 +702,75 @@ function myFunction() {
 </section>
 
 
+
+<section data-bs-version="5.1" class="mbr-fullscreen d-flex flex-column p-0 cid-7Ou85Oeiwy" id="design-block-7Ou85Oeiwy">
+    <!--
+      ███╗   ███╗ ██████╗ ██████╗ ██╗██╗    ██╗██╗███████╗███████╗
+      ████╗ ████║██╔═══██╗██╔══██╗██║██║    ██║██║██╔════╝██╔════╝
+      ██╔████╔██║██║   ██║██████╔╝██║██║ █╗ ██║██║███████╗█████╗  
+      ██║╚██╔╝██║██║   ██║██╔══██╗██║██║███╗██║██║╚════██║██╔══╝  
+      ██║ ╚═╝ ██║╚██████╔╝██████╔╝██║╚███╔███╔╝██║███████║███████╗
+      ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚═╝ ╚══╝╚══╝ ╚═╝╚══════╝╚══════╝
+      MobiWise Block. If you like it, don't forget to buy me a coffee.
+      https://www.buymeacoffee.com/MobiWise
+      Version: 0.1 | update : 2022/03/24
+      -->
+    
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-center subsection">
+      <div class="w-100 h-100 position-absolute overlay1" style="z-index:0"></div>
+      <div style="z-index:1" class="col-12 col-lg-6">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>First Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-end subsection">
+      <div class="w-100 h-100 position-absolute overlay2"></div>
+      <div class="col-12 col-lg-6">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Second Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-start subsection">
+      <div class="w-100 h-100 position-absolute overlay3"></div>
+      <div class="col-12 col-lg-6">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Third Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-end subsection">
+      <div class="w-100 h-100 position-absolute overlay4"></div>
+      <div class="col-12 col-lg-6">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Fourth Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-start subsection">
+      <div class="w-100 h-100 position-absolute overlay5"></div>
+      <div class="col-12 col-lg-6">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Fifth Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+    <div class="mbr-fullscreen w-100 sticky-top justify-content-center subsection">
+      <div class="w-100 h-100 position-absolute overlay6"></div>
+      <div class="col-12 col-lg-6 mwcont">
+        <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Sixth Subsection Title</strong></h1>
+        <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><strong>MobiWise</strong> • Cool stuff for Mobirise !</h2>
+        <p class="mbr-text mbr-fonts-style display-7">Custom your project with not native functions.</p>
+        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.buymeacoffee.com/MobiWise" target="_blank"><span class="mobi-mbri mobi-mbri-hot-cup mbr-iconfont mbr-iconfont-btn"></span>Buy Me A Coffee</a></div>
+      </div>
+    </div>
+  </section>
 
 
 <script src="assets/witsec-jquery-3.6.0/jquery-3.6.0.min.js"></script>
