--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="">
+  <meta property="og:image" content="">
+  <meta name="twitter:title" content="verifycar - antes de comprar é melhor verificar">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/asset-2.svg" type="image/x-icon">
   <meta name="description" content="Tem mais dúvidas? Chama aqui no whatsapp ou envia para gente um e-mail e a nossa equipe te responde bem rápido">
@@ -48,6 +52,16 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-20377927-14');
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0SHSK0B4ZE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0SHSK0B4ZE');
 </script>
 <!-- /Analytics -->
 
@@ -95,7 +109,7 @@
             <div class="col-12 col-lg-9">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>  </strong><br><strong>A compra do seu carro <br>seminovo&nbsp;pode ser <br>uma experiência agradável</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-5">Verificamos todos os detalhes do seu futuro automóvel<br>e te recomendamos a compra ou desistência</p>
+                <p class="mbr-text mbr-fonts-style display-5">Verificamos todos os detalhes do seu futuro automóvel<br>e recomendamos a compra ou desistência</p>
                 
             </div>
         </div>
@@ -523,7 +537,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="oJp+fuMZWAuMAHuLsWHG18/YqEkcq+XpPhBrHVwhTB5s5VLP6RtKh36OC6SXPEQOcV4rq0JS53VZOWUpvUCLgQM7ji0jDl30WDdlSuUdgXaB1qJ2TbFGjUFYDzfRU0rv.JobZEWbWyJupPELw0s6EKOZ7MoAoI4ZMI8WOaNvx69y6jrGr15RB+Qi1n+ydjMfg+2PlXLjRjobpdClexBpmKLNk3e5dk+Cwe4tF7rO7cB1qCWo8TQyiSGT7q8oV6uU5">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Verifycar"><input type="hidden" name="email" data-form-email="true" value="PnHigoG+6iuz13Zr8PuFHWuDnFatSAFrQyu2JXjtWfI998CcLavPkiaeg/yar6vOhNYsgQYtNYvXnnKRmAvK5XZu9P0br82Z1ijk3stqhO2B2xqApWWY8xmpSXGFUAKR.yillEIiHq9roAhIfQoMzp/DrjD/YCS5yR9qyEt0E2ZTFf1IAzUDumX9qPZDDa/ChKWBGYaqAWEOkPm9cNDsaXfZRaJ7jYJW6E+5hRD+GfAwousVlNvZS90Ou8KuwWj15">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato em breve.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
